src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from c:\Users\Quoc An\Documents\anc++\pplass\pplass3\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'auto'", "'break'", "'boolean'", "'do'", "'else'", 
                     "'float'", "'for'", "'function'", "'if'", "'integer'", 
                     "'return'", "'string'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "','", 
                     "'.'", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "LINE_COMMENT", "WS", "AUTO", 
                      "BREAK", "BOOL", "DO", "ELSE", "FLOAT", "FOR", "FUNCT", 
                      "IF", "INT", "RETURN", "STR", "WHILE", "VOID", "OUT", 
                      "CONT", "OF", "INHER", "ARR", "ADD", "MINUS", "MUL", 
                      "DIV", "MOD", "NOT", "AND", "OR", "EQUAL", "NEQ", 
                      "SM", "SMEQ", "BG", "BGEQ", "STROP", "LP", "RP", "LB", 
                      "RB", "LS", "RS", "EQ", "COMMA", "DOT", "SEMI", "COLON", 
                      "ID", "INTLIT", "FLOATLIT", "DECPART", "EXPPART", 
                      "BOOLIT", "STRINGLIT", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_vardecls = 2
    RULE_vardecl = 3
    RULE_idlist = 4
    RULE_vardecl_init = 5
    RULE_init = 6
    RULE_paradecl = 7
    RULE_funcdecl = 8
    RULE_paralist = 9
    RULE_paralistt = 10
    RULE_statement = 11
    RULE_other = 12
    RULE_block_statement = 13
    RULE_inner_block = 14
    RULE_assign_statement = 15
    RULE_if_statement = 16
    RULE_ifmatch = 17
    RULE_ifunmatch = 18
    RULE_for_statement = 19
    RULE_initial = 20
    RULE_while_statement = 21
    RULE_dowhile_statement = 22
    RULE_break_statement = 23
    RULE_continue_statement = 24
    RULE_return_statement = 25
    RULE_call_statement = 26
    RULE_expr = 27
    RULE_expr1 = 28
    RULE_expr2 = 29
    RULE_expr3 = 30
    RULE_expr4 = 31
    RULE_expr5 = 32
    RULE_expr6 = 33
    RULE_expr7 = 34
    RULE_expr8 = 35
    RULE_expr9 = 36
    RULE_list_expr = 37
    RULE_expr_list = 38
    RULE_literal = 39
    RULE_arrlit = 40
    RULE_arraylist = 41
    RULE_array = 42
    RULE_datatype = 43
    RULE_atomic = 44
    RULE_arrdecl = 45
    RULE_dimension = 46
    RULE_di_list = 47

    ruleNames =  [ "program", "decl", "vardecls", "vardecl", "idlist", "vardecl_init", 
                   "init", "paradecl", "funcdecl", "paralist", "paralistt", 
                   "statement", "other", "block_statement", "inner_block", 
                   "assign_statement", "if_statement", "ifmatch", "ifunmatch", 
                   "for_statement", "initial", "while_statement", "dowhile_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "call_statement", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "expr7", "expr8", "expr9", 
                   "list_expr", "expr_list", "literal", "arrlit", "arraylist", 
                   "array", "datatype", "atomic", "arrdecl", "dimension", 
                   "di_list" ]

    EOF = Token.EOF
    COMMENT=1
    LINE_COMMENT=2
    WS=3
    AUTO=4
    BREAK=5
    BOOL=6
    DO=7
    ELSE=8
    FLOAT=9
    FOR=10
    FUNCT=11
    IF=12
    INT=13
    RETURN=14
    STR=15
    WHILE=16
    VOID=17
    OUT=18
    CONT=19
    OF=20
    INHER=21
    ARR=22
    ADD=23
    MINUS=24
    MUL=25
    DIV=26
    MOD=27
    NOT=28
    AND=29
    OR=30
    EQUAL=31
    NEQ=32
    SM=33
    SMEQ=34
    BG=35
    BGEQ=36
    STROP=37
    LP=38
    RP=39
    LB=40
    RB=41
    LS=42
    RS=43
    EQ=44
    COMMA=45
    DOT=46
    SEMI=47
    COLON=48
    ID=49
    INTLIT=50
    FLOATLIT=51
    DECPART=52
    EXPPART=53
    BOOLIT=54
    STRINGLIT=55
    ERROR_CHAR=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self.decl()
                self.state = 99 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.OUT) | (1 << MT22Parser.INHER) | (1 << MT22Parser.ID))) != 0)):
                    break

            self.state = 101
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecls(self):
            return self.getTypedRuleContext(MT22Parser.VardeclsContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.vardecls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl_init(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_initContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def paradecl(self):
            return self.getTypedRuleContext(MT22Parser.ParadeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecls




    def vardecls(self):

        localctx = MT22Parser.VardeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecls)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.vardecl_init()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.vardecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.paradecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def datatype(self):
            return self.getTypedRuleContext(MT22Parser.DatatypeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.idlist()
            self.state = 113
            self.match(MT22Parser.COLON)
            self.state = 114
            self.datatype()
            self.state = 115
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idlist)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(MT22Parser.ID)
                self.state = 118
                self.match(MT22Parser.COMMA)
                self.state = 119
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init(self):
            return self.getTypedRuleContext(MT22Parser.InitContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_init




    def vardecl_init(self):

        localctx = MT22Parser.Vardecl_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.init()
            self.state = 124
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def datatype(self):
            return self.getTypedRuleContext(MT22Parser.DatatypeContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def init(self):
            return self.getTypedRuleContext(MT22Parser.InitContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_init




    def init(self):

        localctx = MT22Parser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_init)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(MT22Parser.ID)
                self.state = 127
                self.match(MT22Parser.COLON)
                self.state = 128
                self.datatype()
                self.state = 129
                self.match(MT22Parser.EQ)
                self.state = 130
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(MT22Parser.ID)
                self.state = 133
                self.match(MT22Parser.COMMA)
                self.state = 134
                self.init()
                self.state = 135
                self.match(MT22Parser.COMMA)
                self.state = 136
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParadeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INHER(self):
            return self.getToken(MT22Parser.INHER, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def datatype(self):
            return self.getTypedRuleContext(MT22Parser.DatatypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paradecl




    def paradecl(self):

        localctx = MT22Parser.ParadeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paradecl)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(MT22Parser.INHER)
                self.state = 141
                self.match(MT22Parser.OUT)
                self.state = 142
                self.match(MT22Parser.ID)
                self.state = 143
                self.match(MT22Parser.COLON)
                self.state = 144
                self.datatype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(MT22Parser.INHER)
                self.state = 146
                self.match(MT22Parser.ID)
                self.state = 147
                self.match(MT22Parser.COLON)
                self.state = 148
                self.datatype()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.match(MT22Parser.OUT)
                self.state = 150
                self.match(MT22Parser.ID)
                self.state = 151
                self.match(MT22Parser.COLON)
                self.state = 152
                self.datatype()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.match(MT22Parser.ID)
                self.state = 154
                self.match(MT22Parser.COLON)
                self.state = 155
                self.datatype()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCT(self):
            return self.getToken(MT22Parser.FUNCT, 0)

        def datatype(self):
            return self.getTypedRuleContext(MT22Parser.DatatypeContext,0)


        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def paralist(self):
            return self.getTypedRuleContext(MT22Parser.ParalistContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def INHER(self):
            return self.getToken(MT22Parser.INHER, 0)

        def block_statement(self):
            return self.getTypedRuleContext(MT22Parser.Block_statementContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcdecl)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match(MT22Parser.ID)
                self.state = 159
                self.match(MT22Parser.COLON)
                self.state = 160
                self.match(MT22Parser.FUNCT)
                self.state = 161
                self.datatype()
                self.state = 162
                self.match(MT22Parser.LP)
                self.state = 163
                self.paralist()
                self.state = 164
                self.match(MT22Parser.RP)
                self.state = 165
                self.match(MT22Parser.INHER)
                self.state = 166
                self.match(MT22Parser.ID)
                self.state = 167
                self.block_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.match(MT22Parser.ID)
                self.state = 170
                self.match(MT22Parser.COLON)
                self.state = 171
                self.match(MT22Parser.FUNCT)
                self.state = 172
                self.datatype()
                self.state = 173
                self.match(MT22Parser.LP)
                self.state = 174
                self.paralist()
                self.state = 175
                self.match(MT22Parser.RP)
                self.state = 176
                self.block_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paralistt(self):
            return self.getTypedRuleContext(MT22Parser.ParalisttContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paralist




    def paralist(self):

        localctx = MT22Parser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paralist)
        try:
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHER, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.paralistt()
                pass
            elif token in [MT22Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalisttContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paradecl(self):
            return self.getTypedRuleContext(MT22Parser.ParadeclContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def paralistt(self):
            return self.getTypedRuleContext(MT22Parser.ParalisttContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paralistt




    def paralistt(self):

        localctx = MT22Parser.ParalisttContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paralistt)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.paradecl()
                self.state = 185
                self.match(MT22Parser.COMMA)
                self.state = 186
                self.paralistt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 188
                self.paradecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(MT22Parser.If_statementContext,0)


        def other(self):
            return self.getTypedRuleContext(MT22Parser.OtherContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_statement




    def statement(self):

        localctx = MT22Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 191
                self.if_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.other()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OtherContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_statement(self):
            return self.getTypedRuleContext(MT22Parser.Block_statementContext,0)


        def assign_statement(self):
            return self.getTypedRuleContext(MT22Parser.Assign_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(MT22Parser.For_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(MT22Parser.While_statementContext,0)


        def dowhile_statement(self):
            return self.getTypedRuleContext(MT22Parser.Dowhile_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(MT22Parser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(MT22Parser.Continue_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(MT22Parser.Return_statementContext,0)


        def call_statement(self):
            return self.getTypedRuleContext(MT22Parser.Call_statementContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_other




    def other(self):

        localctx = MT22Parser.OtherContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_other)
        try:
            self.state = 204
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.block_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 196
                self.assign_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 197
                self.for_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 198
                self.while_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 199
                self.dowhile_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 200
                self.break_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 201
                self.continue_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 202
                self.return_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 203
                self.call_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def inner_block(self):
            return self.getTypedRuleContext(MT22Parser.Inner_blockContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_block_statement




    def block_statement(self):

        localctx = MT22Parser.Block_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_block_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            self.match(MT22Parser.LB)
            self.state = 207
            self.inner_block()
            self.state = 208
            self.match(MT22Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inner_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(MT22Parser.StatementContext,0)


        def inner_block(self):
            return self.getTypedRuleContext(MT22Parser.Inner_blockContext,0)


        def vardecls(self):
            return self.getTypedRuleContext(MT22Parser.VardeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_inner_block




    def inner_block(self):

        localctx = MT22Parser.Inner_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_inner_block)
        try:
            self.state = 217
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 210
                self.statement()
                self.state = 211
                self.inner_block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 213
                self.vardecls()
                self.state = 214
                self.inner_block()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

